--- a/config
+++ b/config
@@ -280,7 +280,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Usted presiono atajo para Salir. Realmente desea usted salir de i3? Esto cerrará la sesion.' -b 'Sí, salir de  i3' 'i3-msg exit'"
 
 
 ################### RESIZE ##############################
@@ -339,13 +339,13 @@ mode "resize" {
 # font pango:Sans 13
 # font pango:Noto Mono Regular 13
 # font pango:DroidSansMono 13
-font pango:Noto Mono Regular 13
+font pango:Noto Mono Regular 10
 
 
 ################### MENU ######################
 
 # start dmenu
-bindsym $mod+d exec dmenu_run -b -fn 'NotoMonoRegular:bold:pixelsize=10' 
+bindsym $mod+d exec dmenu_run -b -fn 'NotoMonoRegular:bold:pixelsize=12' 
 
 # start j4-dmenu (based on desktop files in /usr/share/applications)
 # https://github.com/enkore/j4-dmenu-desktop
@@ -440,21 +440,21 @@ bindsym $mod+Shift+0 move container to workspace 10; workspace 10
 # Assign application to start on a specific workspace
 # you can find the class with the program xprop
 
-assign [class="Firefox|variety|Variety|Opera"]                                       → 1
-assign [class="google-chrome-stable"]      					     → 2
-#assign [class="Xed|xed|Brackets|Atom|Code"]                                         → 2
-#assign [class="Inkscape"]                                                           → 3
-assign [class="Solus-sc"] 							     → 4
-#assign [class="ristretto|Ristretto|shotwell|Shotwell|Xviewer"]                      → 5
-#assign [class="Meld"]                                                               → 5
-assign [class="feh|gthumb|Gthumb|eog|Eog|Pinta|Gedit|Pixeluvo"] 		     → 5
-assign [class="|Geary|geary"]                                                        → 6
-assign [class="|Vlc|vlc"]                                                            → 7
-#assign [class="Nemo|Thunar|Caja|nautilus|Nautilus"]                                 → 8
-#assign [class="Geary|Evolution"]                                                    → 9
-#assign [class="Spotify|spotify"]                                                    → 10
+assign [class="Firefox|Vivaldi-stable|Opera"]                                       → 1
+assign [class="sublime-text|sublime_text|Sublime_text|subl|Subl|subl3|Subl3"]       → 2
+assign [class="Xed|xed|Brackets|Atom|Code"]                                         → 2
+assign [class="Inkscape|Nautilus"]                                                  → 3
+assign [class="solus-sc|Solus-sc"]                                                  → 4
+assign [class="ristretto|Ristretto|shotwell|gedit|Xviewer"]                         → 5
+assign [class="Meld|Gedit"]                                                         → 5
+assign [class="feh|gthumb|Gthumb|Pinta|pixeluvo|Pixeluvo"]                          → 5
+assign [class="Vlc|vlc|eog|Eog"]                                                    → 6
+assign [class="Vmplayer|VirtualBox"]                                                → 7
+#assign [class="Nemo|Thunar|Caja|"]                                                 → 8
+assign [class="Geary|Evolution"]                                                    → 9
+assign [class="Spotify|spotify"]                                                    → 10
 #fix for spotify not moving to workspace 10
-#for_window [class="Spotify"] move to workspace 10
+for_window [class="Spotify"] move to workspace 10
 
 
 ################### EXECUTE ######################
@@ -469,20 +469,15 @@ exec_always --no-startup-id numlockx off
 # insync
 #exec insync start
 
-#Bluetooth
-exec blueman start
-
-#Power Manager
-exec mate-power-manager
-
 #variety
 exec variety
 
 # clipit
 exec clipit
 
-#screenshot
-#exec budgie-screenshot-applets
+#Power
+exec mate-power-manager
+
 
 # USER APPLICATIONS
 
@@ -513,11 +508,11 @@ exec clipit
 
 #workspace 1 related
 bindsym $mod+F1 exec firefox;workspace 1;focus
-#bindsym control+mod1+f exec firefox;workspace 1; focus
+bindsym control+mod1+f exec firefox;workspace 1; focus
 #bindsym control+mod1+v exec vivaldi-stable;workspace 1; focus
 
 #workspace 2 related
-bindsym $mod+F2 exec google-chrome-stable;workspace 2; focus
+bindsym $mod+F2 exec google-chrome-stable;workspace 2;focus
 
 #workspace 3 related
 bindsym $mod+F3 exec nautilus;workspace 3;focus
@@ -529,26 +524,25 @@ bindsym $mod+F4 exec solus-sc;workspace 4;focus
 
 #workspace 5 related
 bindsym $mod+F5 exec gedit;workspace 5;focus
-#bindsym control+mod1+m exec meld;workspace 5;focus
+#bindsym control+mod1+m gedit meld;workspace 5;focus
 
 #workspace 6 related
-bindsym $mod+F6 exec geary;workspace 6;focus
+bindsym $mod+F6 exec vlc;workspace 6;focus
 
 #workspace 7 related
-bindsym $mod+F7 exec vlc;workspace 6;focus
 
 #workspace 8 related
 # filemanagers see at bottom distro dependent
 
 #workspace 9 related
-#bindsym $mod+F9 exec evolution;workspace 9;focus
-#bindsym control+mod1+e exec evolution;workspace 9;focus
+bindsym $mod+F9 exec evolution;workspace 9;focus
+bindsym control+mod1+e exec evolution;workspace 9;focus
 #bindsym $mod+F9 exec geary;workspace 9;focus
 #bindsym control+mod1+e exec geary;workspace 9;focus
 
 #workspace 10 related
 bindsym $mod+F10 exec spotify;workspace 10;focus
-#bindsym control+mod1+s exec spotify;workspace 10;focus
+bindsym control+mod1+s exec spotify;workspace 10;focus
 
 #catfish
 bindsym control+mod1+c exec catfish;focus
@@ -574,8 +568,8 @@ for_window [urgent=latest] focus
 
 
 #bindsym Print exec scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f ~/Pictures/'
-bindsym Print exec scrot '%Y-%m-%d-%H-%M-%S.jpg' -e 'mv $f ~/Pictures/' && sleep 1 && exec notify-send 'la captua a sido guardada en ~/Pictures'
-bindsym Control+Print exec gnome-screenshot -i
+bindsym Print exec scrot '%Y-%m-%d-%H-%M-%S.jpg' -e 'mv $f ~/Imágenes/Capturas/I3' && sleep 2 && exec notify-send 'La captura se ha guardado en ~/Imágenes/Capturas/I3'
+#bindsym Control+Print exec gnome-screenshot -i
 #bindsym shift+Print exec shutter
 #bindsym control+Print exec xfce4-screenshooter
 
@@ -588,11 +582,11 @@ bindsym Control+Print exec gnome-screenshot -i
 for_window [class="^Skype$"] floating enable
 for_window [class="^Gnome-font-viewer$"] floating enable
 for_window [class="^Gpick$"] floating enable
-#for_window [class="^Vlc$"] floating enable
+for_window [class="^Vlc$"] floating enable
 #for_window [class="^Spotify$"] floating enable workspace 10
 #for_window [instance="gimp"] floating enable
 for_window [window_role="^gimp-toolbox-color-dialog$"] floating enable
-for_window [instance="variety"] floating enable workspace 1
+for_window [instance="variety"] floating enable
 for_window [class="Gnome-system-monitor"] floating enable
 #for_window [class="Mate-system-monitor"] floating enable
 #for_window [class="Xfce4-taskmanager"] floating enable
@@ -604,7 +598,7 @@ for_window [class="Pavucontrol"] floating enable
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="^Preferences$"] floating enable
 for_window [window_role="setup"] floating enable
-#for_window [title="^Terminator Preferences$"] floating enable
+for_window [title="^Terminator Preferences$"] floating enable
 #for_window [class="Font-manager"] floating enable
 for_window [class="System-config-printer.py"] floating enable
 for_window [class="Nitrogen"] floating enable
@@ -617,10 +611,10 @@ for_window [class="Usb-creator-gtk"] floating enable
 for_window [instance="script-fu"] border normal
 for_window [class="Imagewriter"] floating enable
 #for_window [class="MintUpdate.py"] floating enable
-for_window [class="Bleachbit"] floating enable
+#for_window [class="Bleachbit"] floating enable
 #for_window [class="Hexchat"] floating disable
-#for_window [class="Xfce4-settings-manager"] floating disable
-#for_window [class="Gnome-control-center"] floating disable
+for_window [class="Xfce4-settings-manager"] floating disable
+for_window [class="Gnome-control-center"] floating disable
 for_window [class="Gnome-terminal"] focus
 
 #Popups during fullscreen mode
@@ -652,14 +646,14 @@ bindsym mod1+Down exec variety --resume
 
 bindsym $mod+Pause mode "$mode_system"
 
-set $mode_system System (k) lock, (l) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
-    bindsym k exec --no-startup-id ~/.config/i3/scripts/i3exit.sh lock, mode "default"
-    bindsym l exec --no-startup-id ~/.config/i3/scripts/i3exit.sh logout, mode "default"
+    bindsym l exec --no-startup-id ~/.config/i3/scripts/i3exit.sh lock, mode "default"
+    bindsym e exec --no-startup-id ~/.config/i3/scripts/i3exit.sh logout, mode "default"
     bindsym s exec --no-startup-id ~/.config/i3/scripts/i3exit.sh suspend, mode "default"
     bindsym h exec --no-startup-id ~/.config/i3/scripts/i3exit.sh hibernate, mode "default"
     bindsym r exec --no-startup-id ~/.config/i3/scripts/i3exit.sh reboot, mode "default"
-    bindsym mod+shift+x exec --no-startup-id ~/.config/i3/scripts/i3exit.sh shutdown, mode "default"
+    bindsym Shift+x exec --no-startup-id ~/.config/i3/scripts/i3exit.sh shutdown, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -737,9 +731,9 @@ bar {
 
     height 20
     workspace_buttons yes
+    position top
     # font pango:DroidSansMono 13
     font pango:Noto Sans 10
-    position top
     #you can change the place via xrandr
     #output DVI-0
 
@@ -774,7 +768,7 @@ status_command i3blocks -c ~/.config/i3/i3blocks-awesome.conf
     # documentation : https://i3wm.org/docs/user-contributed/conky-i3bar.html
     # conky configuration is in conky-i3statusbar
         
-#status_command ~/.config/i3//start-conkys.sh
+#status_command ~/.config/i3/start-conky-i3statusbar.sh
 
    
 colors {
@@ -888,7 +882,7 @@ client.urgent           #4A4A4A #4A4A4A #f7f7f7 #4A4A4A
 # packer i3-gaps-next-git --noedit
 
 for_window [class="^.*"] border pixel 5
-gaps inner 0
+gaps inner 0 
 gaps outer 0
 #smart_gaps on
 #smart_borders on
@@ -983,13 +977,13 @@ bindsym control+mod1+n exec gnome-control-center
 
 #workspace 2 related
 #bindsym $mod+F2 exec subl;workspace 2;focus
-bindsym control+mod1+w exec subl;workspace 2;focus
+#bindsym control+mod1+w exec subl;workspace 2;focus
 #bindsym $mod+F2 exec subl3;workspace 2;focus
 #bindsym control+mod1+w exec subl3;workspace 2;focus
 
 #workspace 8 related
 #bindsym $mod+F8 exec nemo --no-desktop;workspace 8;focus
-bindsym $mod+F8 exec nautilus --no-desktop;workspace 8;focus
+#bindsym $mod+F8 exec nautilus --no-desktop;workspace 8
 #bindsym $mod+F8 exec caja;workspace 8;focus
 #bindsym $mod+F8 exec thunar;workspace 8;focus
 
@@ -1013,7 +1007,7 @@ bindsym $mod+Shift+Return exec nautilus --no-desktop; workspace 8;focus
 #bindsym $mod+Shift+Return exec thunar; workspace 8;focus
 
 #bindsym control+mod1+b exec nemo --no-desktop;workspace 8;focus
-bindsym control+mod1+b exec nautilus --no-desktop;workspace 8;focus
+#bindsym control+mod1+b exec nautilus --no-desktop;workspace 8;focus
 #bindsym control+mod1+b exec caja;workspace 8;focus
 #bindsym control+mod1+b exec thunar;workspace 8;focus
 
@@ -1027,13 +1021,13 @@ bindsym control+mod1+b exec nautilus --no-desktop;workspace 8;focus
 #Authentication dialog
 
 #arch/antergos
-#exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 
 #Linux Mint
 #exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
 
 #solus
-exec budgie-polkit-dialog
+#exec budgie-polkit-dialog
 
 # update
 
@@ -1044,12 +1038,13 @@ exec budgie-polkit-dialog
 #exec pamac-tray
 
 # bluetooth
-#exec blueberry-tray
 #sudo rfkill unblock bluetooth
 #sudo systemctl enable rfkill-unblock@all
-exec --no-startup-id blueman-applet
+#exec --no-startup-id blueman-applet
+exec --no-startup-id redshift-gtk
 
 # network
+#antergos/linux mint
 exec --no-startup-id nm-applet
 
 #install this program for applet
